parallelism limiting and broken button removal, more logging